# dvcp-vaapi

./: .gitignore  README.md  meson.build  plugin.cpp  vaapi_encoder.cpp  vaapi_encoder.h
.github/workflows/: main.yml
subprojects/: ffmpeg.wrap
subprojects/packagefiles/: ffmpeg-vaapi.patch  hevc1.patch  hevc2.patch
wrapper/: host_api.cpp  host_api.h  plugin_api.cpp
